# simple-wayland-client-demo

./: .gitignore  README.md  main.c  main.cpp  meson.build
